--- a/vignettes/migbirdHarvestData_workflow.Rmd
+++ b/vignettes/migbirdHarvestData_workflow.Rmd
@@ -28,6 +28,7 @@ vignette: >
     - [pullErrors](#pullerrors)
     - [manualFix](#manualfix)
     - [writeReport](#writereport)
+    - [writeShiny](#writeshiny)
 - [Part C: Data Visualization and Tabulation](#part-c-data-visualization-and-tabulation)
     - Visualization
         - [outOfStateHunters](#outofstatehunters)
@@ -368,7 +369,6 @@ The automated `correct` function cannot always catch and fix every error. To fin
 ```r
 manualFix(DL1202_corrected, field = "state", error_value = "GS", correct_value = "GA")
 ```
-
 ### writeReport
 
 The `writeReport` function can be used to automatically generate an R markdown document with figures, tables, and summary statistics. This can be done at the end of a download cycle (using `type = "dl_report"`) or the entire HIP season (with `type = "season_report"`). You should expect this function to run for ~1 minute for a download cycle, or ~30 minutes for a total season (containing approximately 4 million records). Writing a total season report is a memory intensive process, so for this option, we recommend [increasing your memory](#memory-problems) allocated to R.
@@ -384,6 +384,18 @@ writeReport(
   yr = 2019,
   dir = "H:/r_projects/hip_data/script",
   file = "season_report_2019")
+```
+
+### writeShiny
+
+The `writeShiny` function is a supplement to the `writeReport` function. It launches an instance of Shiny through R, allowing users to interact with a `findDuplicates` plot to view duplicates by state. Features of the data can be explored quickly without weighing down the `writeReport` function with repetitive facet wrapping. The shiny plot cannot be saved to an html document to view again in the future; R has to run the `writeShiny` function each time.
+
+
+```r
+writeShiny(
+  path = "C:/HIP/all_2019",
+  type = "season_shiny",
+  yr = 2019)
 ```
 
 ## Part C: Data Visualization and Tabulation
