--- a/inst/templates/season_shiny.Rmd
+++ b/inst/templates/season_shiny.Rmd
@@ -39,18 +39,17 @@ findDuplicates(cleaned_data)
 ### Before fixDuplicates (pick a state)
 
 ```{r b_fd_s, echo = FALSE}
-acceptable_49_dl_states <-
-      c("AL", "AK", "AZ", "AR", "CA", "CO", "CT", "DE", "FL", "GA", "ID", "IL",
-        "IN", "IA", "KS", "KY", "LA", "ME", "MD", "MA", "MI", "MN", "MS", "MO",
-        "MT", "NE", "NV", "NH", "NJ", "NM", "NY", "NC", "ND", "OH", "OK", "OR",
-        "PA", "RI", "SC", "SD", "TN", "TX", "UT", "VT", "VA", "WA", "WV", "WI",
-        "WY")
+dl_states <-
+  cleaned_data %>% 
+  select(dl_state) %>% 
+  distinct() %>% 
+  pull()
 
 shinyApp(
 
   ui = fluidPage(
     selectInput("dl_state", "State:",
-                choices = acceptable_49_dl_states),
+                choices = dl_states),
     plotOutput("findDuplicatesPlot")
   ),
 
