--- a/vignettes/migbirdHarvestData_workflow.Rmd
+++ b/vignettes/migbirdHarvestData_workflow.Rmd
@@ -88,10 +88,10 @@ After data are imported, we `clean`:
 
 
 ```r
-DL1202_clean <- clean(DL1202)
+DL1202_clean <- clean(DL1202, plot = TRUE)
 ```
 
-This function renames columns and does simple mutations. Importantly, records are discarded if first name, last name, city of residence, state of residence, or date of birth are missing.
+This function renames columns and does simple mutations. Importantly, records are discarded if first name, last name, city of residence, state of residence, or date of birth are missing. These records with missing values can be visualized using `plot = TRUE`.
 
 Other quick fixes include:
 
